32816 Fix colour contrast ratio in blocks

--- a/themes/agov/agov_barton/sass/styles.scss
+++ b/themes/agov/agov_barton/sass/styles.scss
@@ -1,6 +1,6 @@
 $color-primary: #006893;
 $color-secondary: #333;
-$color-tertiary: #dee0e2;
+$color-tertiary: #f7f7f7;
 
 $font-color: #333;
 $font-family: 'Helvetica Neue', Helvetica, arial, sans-serif;
